--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,12 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
+#highlighter: pygments
+
+# Dependencies
+markdown:         kramdown
+highlighter:      rouge
+excerpt_separator: ""
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
