--- a/_config.yml
+++ b/_config.yml
@@ -125,3 +125,8 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
+
+collections:
+  disciplinas:
+    output: true
+    permalink: /disciplinas/:path/
