--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Fatec ♥ Sistemas para Internet
 email: adam.macias@fatec.sp.gov.br
 description: "Repositório com arquivos, aulas, provas, trabalhos, apostilas entre outras coisas relacionadas ao curso de Sistemas para Internet da Fatec Rubens Lara."
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/fatec-si-digital/" # the subpath of your site, e.g. /blog/
+url: "https://github.com/adammacias" # the base hostname & protocol for your site
 github_username:  fatechub
 
 # URL settings
