Melhora estrutura de diretorios e outras :poop: coisas

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
+# Global
+._*
+.AppleDouble
+.DS_Store
+.localized
+.LSOverride
+.Spotlight-V100
+.Trashes
+Icon
+Desktop.ini
+ehthumbs.db
+Thumbs.db
+*~
+TAGS
+tags
+.*.sw[a-z]
+.netrwhist
+*.un~
+Session.vim
+*.sublime-project
+*.sublime-workspace
+*.sublime-projectcompletions
+*.tmproj
+*.tmproject
+tmtags
+nbproject/*
+.ftppass
+.sftp-config.json
+
+# Project
 _site
 .sass-cache
